// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="styles__DividerView-sc-1g8287f-0 epQbWn"
  data-testid="divider"
  style={
    Object {
      "marginBottom": "24px",
      "marginTop": "24px",
      "width": "100%",
    }
  }
/>
`;

exports[`Avatar  should match snapshot 1`] = `
<div
  className="styles__DividerView-sc-1g8287f-0 epQbWn"
  data-testid="divider"
  style={
    Object {
      "marginBottom": "24px",
      "marginTop": "24px",
      "width": "100%",
    }
  }
/>
`;

exports[`Avatar should match snapshot 1`] = `
<div
  className="styles__DividerView-sc-1g8287f-0 epQbWn"
  style={
    Object {
      "marginBottom": "24px",
      "marginTop": "24px",
      "width": "100%",
    }
  }
/>
`;
